[package]
name = "smark"
version = "0.1.9"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"
description = "The tool provides API to get markdown documents from files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-web = "4"
anyhow = "1.0.52"
chrono = "0.4.19"
glob = "0.3.0"
html5ever = "0.26.0"
lindera = "0.8.1"
lindera-core = "0.8.1"
lindera-tantivy = "0.8.1"
linked-hash-map = "0.5.4"
log = "0.4.14"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.0"
serde = "1.0.133"
serde_json = "1.0.74"
structopt = "0.3.25"
tantivy = "0.16.1"
uuid = "0.8.2"
yaml-rust = "0.4.5"

[dev-dependencies]
rand = "0.8.5"
strum = "0.23.0"
strum_macros = "0.23.1"
tempdir = "0.3.7"
urlencoding = "2.1.0"
